Removing the old routes and fixing the tests
