# doc/swagger.yml
@@ -452,7 +452,7 @@ paths:
             security:
                 - {}
                 -   bearerAuth: []
-    /{channelCode}/taxon-products/by-slug/{slug}:
+    /{channelCode}/taxon-products/by-slug/{taxonSlug}:
         parameters:
             -   $ref: "#/parameters/ChannelCode"
         get:
@@ -462,7 +462,7 @@ paths:
             description: "This endpoint will return a paginated list of products for given taxon."
             operationId: "productCatalogBySlug"
             parameters:
-                -   name: "slug"
+                -   name: "taxonSlug"
                     in: "path"
                     description: "Slug of taxonomy for which products should be listed."
                     required: true
@@ -487,7 +487,7 @@ paths:
                     description: "Paginated product list."
                     schema:
                         $ref: "#/definitions/ProductsPage"
-    /{channelCode}/taxon-products-by-slug/{slug}:
+    /{channelCode}/taxon-products-by-slug/{taxonSlug}:
         parameters:
             -   $ref: "#/parameters/ChannelCode"
         get:
@@ -498,7 +498,7 @@ paths:
             description: "This endpoint will return a paginated list of products for given taxon."
             operationId: "productCatalogBySlug_deprecated"
             parameters:
-                -   name: "slug"
+                -   name: "taxonSlug"
                     in: "path"
                     description: "Slug of taxonomy for which products should be listed."
                     required: true
